@@ -307,6 +307,8 @@ typedef struct
   int sraw_ycc;
   /* Force use x3f data decoding either if demosaic pack GPL2 enabled */
   int force_foveon_x3f;
+  /* Sony ARW2 digging mode */
+  int sony_arw2_options;
 }libraw_output_params_t;
 
 typedef struct
